// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Criterion Container snapshot is graded and is not grading 1`] = `
<Form.Group>
  <Form.Label
    className="criteria-label"
  >
    <span
      className="criteria-title"
    >
      prompt
    </span>
    <InfoPopover>
      <div
        className="help-popover-option"
        key="option name"
      >
        <strong>
          this label
        </strong>
        <br />
        explanation
      </div>
      <div
        className="help-popover-option"
        key="option name 2"
      >
        <strong>
          this label 2
        </strong>
        <br />
        explanation 2
      </div>
    </InfoPopover>
  </Form.Label>
  <div
    className="rubric-criteria"
  >
    <RadioCriterion
      isGrading={false}
      orderNum={1}
    />
  </div>
  <CriterionFeedback
    isGrading={false}
    orderNum={1}
  />
</Form.Group>
`;

exports[`Criterion Container snapshot is ungraded and is grading 1`] = `
<Form.Group>
  <Form.Label
    className="criteria-label"
  >
    <span
      className="criteria-title"
    >
      prompt
    </span>
    <InfoPopover>
      <div
        className="help-popover-option"
        key="option name"
      >
        <strong>
          this label
        </strong>
        <br />
        explanation
      </div>
      <div
        className="help-popover-option"
        key="option name 2"
      >
        <strong>
          this label 2
        </strong>
        <br />
        explanation 2
      </div>
    </InfoPopover>
  </Form.Label>
  <div
    className="rubric-criteria"
  >
    <RadioCriterion
      isGrading={true}
      orderNum={1}
    />
  </div>
  <CriterionFeedback
    isGrading={true}
    orderNum={1}
  />
</Form.Group>
`;

exports[`Criterion Container snapshot is ungraded and is not grading 1`] = `
<Form.Group>
  <Form.Label
    className="criteria-label"
  >
    <span
      className="criteria-title"
    >
      prompt
    </span>
    <InfoPopover>
      <div
        className="help-popover-option"
        key="option name"
      >
        <strong>
          this label
        </strong>
        <br />
        explanation
      </div>
      <div
        className="help-popover-option"
        key="option name 2"
      >
        <strong>
          this label 2
        </strong>
        <br />
        explanation 2
      </div>
    </InfoPopover>
  </Form.Label>
  <div
    className="rubric-criteria"
  >
    <ReviewCriterion
      orderNum={1}
    />
  </div>
  <CriterionFeedback
    isGrading={false}
    orderNum={1}
  />
</Form.Group>
`;
